--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-push-notification": "^1.5.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
