--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.5",
     "typescript": "^4.9.5",
