--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.4",
     "@types/nodemailer": "^6.4.9",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.2",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
