--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon dist/server.js",
     "compiler": "tsc -w",
-    "start": "concurrently --kill-others \"npm run server\" \"npm run compiler\""
+    "start": "concurrently --kill-others \"npm run server\" \"npm run compiler\"",
+    "start:prod": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +16,16 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -32,12 +36,14 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.3",
     "@types/connect-mongodb-session": "^2.4.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.4",
     "@types/nodemailer": "^6.4.9",
