--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
+  "engines": {
+    "node": "18.16.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon dist/server.js",
     "compiler": "tsc -w",
-    "start": "concurrently --kill-others \"npm run server\" \"npm run compiler\"",
-    "start:prod": "node dist/server.js"
+    "start:dev": "concurrently --kill-others \"npm run server\" \"npm run compiler\"",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
